07/07 module01 add sed

--- a/module01/ex04/Makefile
+++ b/module01/ex04/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: skim <skim@student.42seoul.kr>             +#+  +:+       +#+         #
+#    By: skim <skim@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/01 15:50:22 by skim              #+#    #+#              #
-#    Updated: 2021/07/08 03:24:54 by skim             ###   ########.fr        #
+#    Updated: 2021/07/08 16:26:00 by skim             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,6 +23,7 @@ $(NAME) :
 
 clean :
 	@rm -rf $(NAME)
+	@rm -rf *.replace
 
 fclean : clean
 
