--- a/module04/ex00/Makefile
+++ b/module04/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: skim <skim@student.42seoul.kr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/14 14:09:54 by skim              #+#    #+#              #
-#    Updated: 2021/07/23 16:26:38 by skim             ###   ########.fr        #
+#    Updated: 2021/07/23 18:12:49 by skim             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,8 @@ NAME = a.out
 CC = clang++
 CFLAGS = -Wall -Werror -Wextra
 
-SRCS = Animal.cpp Dog.cpp Cat.cpp main.cpp
+SRCS = Animal.cpp Dog.cpp Cat.cpp main.cpp \
+		WrongAnimal.cpp WrongCat.cpp
 
 all : $(NAME)
 
