--- a/module01/ex05/Makefile
+++ b/module01/ex05/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: skim <skim@student.42.fr>                  +#+  +:+       +#+         #
+#    By: skim <skim@student.42seoul.kr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/01 15:50:22 by skim              #+#    #+#              #
-#    Updated: 2021/07/08 16:27:53 by skim             ###   ########.fr        #
+#    Updated: 2021/07/29 14:45:17 by skim             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ SRCS = main.cpp Karen.cpp
 all : $(NAME)
 
 $(NAME) :
-	@$(CC) $(CFLAGS) $(SRCS) -o $(NAME)
+	@$(CC) $(CFLAGS) -std=c++98 $(SRCS) -o $(NAME)
 
 clean :
 	@rm -rf $(NAME)
