--- a/module04/ex02/Makefile
+++ b/module04/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: skim <skim@student.42seoul.kr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/14 14:09:54 by skim              #+#    #+#              #
-#    Updated: 2021/07/23 18:32:28 by skim             ###   ########.fr        #
+#    Updated: 2021/08/04 18:16:17 by skim             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ NAME = a.out
 CC = clang++
 CFLAGS = -Wall -Werror -Wextra
 
-SRCS = Animal.cpp Dog.cpp Cat.cpp main.cpp
+SRCS = Animal.cpp Dog.cpp Cat.cpp Brain.cpp main.cpp
 all : $(NAME)
 
 $(NAME) :
